# SDPY

./: CMakeLists.txt  SuperBuild.cmake
SuperBuild/: External_python-dipy.cmake
